# astronet-dr25-pytorch

./: .gitignore  README.md  pyproject.toml  requirements-m1.txt  requirements.txt
docs/: 404.html  index.html  site.js  styles.css
docs/articles/: astronet-training.html  kepler-dr25-guide.html
scripts/: launch_m1_download.sh  launch_m2_1000.sh  m1_build_views.py  m1_compare_robovetter.py  m1_dataset_budget.py  m1_download_supervised.py  m1_plan_download.py  m1_run_checks.py  m1_train.py  m2_prepare_subset.py
site-content/: astronet-training.md  kepler-dr25-guide.md
site-tools/: build-site.mjs  package.json  validate-site.mjs
src/astronet_dr25/: __init__.py  dataset.py  metrics.py  model.py  preprocessing.py
tests/: test_model.py  test_preprocessing.py
